# cp-font-preview

./: .gitignore  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  README.md  TODO.md  justfile  pyproject.toml  test_bdf.py  test_simple_display.py  test_ui_mockup.py
docs/: README.md  configuration.md  development.md  enhanced-ui-plan.md  hybrid-approach.md  phase1-complete.md  quick-start.md  troubleshooting.md  user-guide.md
src/cp_font_preview/: __init__.py  cli.py  layout.py  manifest.py  preview.py  watcher.py
tests/: conftest.py  test_cli.py  test_manifest.py
